[build-system]
requires = ["hatchling == 1.21"]
build-backend = "hatchling.build"

[project]
name = "example_package_pattersonal2332"
version = "1.1.1"
authors = [
  { name="pattersonal2332", email="pattersonal2332@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files.globs = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ANLaMP/super_duper"
Issues = "https://github.com/ANLaMP/super_duper/issues"

[tool.hatch.build]
packages = ["example_package_pattersonal2332"]
sources = ["src"]
